# reversible-synth

./: .gitignore  CLUSTER_GUIDE.md  DOCUMENTATION.md  README.md  RESEARCH_PROGRESS.md  pyproject.toml
reversible_synth/: __init__.py  demo.py  gates.py  identity_generator.py  identity_synthesis.py  permutation.py  synthesis_exact.py  synthesis_heuristic.py
reversible_synth/tests/: test_gates.py  test_identity.py  test_identity_synthesis.py  test_synthesis.py
scripts/: generate_identities.py  precompute_bfs.py  precompute_bfs_job.sh  run_identity.sh  setup_env.sh  submit_all_jobs.py  template_database.py
sword-1.1-64bit/: CHANGELOG  LICENSE_Smt2Sf  README
sword-1.1-64bit/doc/: Makefile  USAGE  example1.cpp  example2.cpp
sword-1.1-64bit/include/: SolverTypes.h  SwordOpcode.h  libmodule.h  libsword.h
sword-1.1-64bit/include/modules/: CardinalityLessThan.h
